--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "nodemon": "^2.0.16"
   },
   "dependencies": {
-    "uuid": "^8.3.2"
+    "bson-objectid": "^2.0.3",
+    "commander": "^9.3.0",
+    "uuid": "^8.3.2",
+    "yargs": "^17.5.1"
   }
 }
